objects/Distributor_Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Distributor Inventory</relationshipLabel>
        <relationshipName>Distributor_Inventory</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Org__c</fullName>
        <formula>TEXT(Account__r.Business_Org__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Description</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Distributor Inventory</relationshipLabel>
        <relationshipName>Distributor_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_id__c</fullName>
        <description>external ID for communication with SAP. Plant + material no</description>
        <externalId>true</externalId>
        <label>SAP_id</label>
        <length>26</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Distributor Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quantity__c</columns>
        <columns>Account__c</columns>
        <columns>SAP_id__c</columns>
        <columns>Business_Org__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DPS_Promotions</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Product__c</columns>
        <columns>Price__c</columns>
        <columns>Quantity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Promotions</value>
        </filters>
        <label>DPS Promotions</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Power_Solutions</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Quantity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Org__c</field>
            <operation>equals</operation>
            <value>Integrated</value>
        </filters>
        <label>Power Solutions</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Material</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributor Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>